force-app/main/default/objects/Session__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>TEXT(FLOOR((End_Time__c - Start_Time__c))) &amp; &quot; days, &quot; &amp;
TEXT(FLOOR(MOD((End_Time__c - Start_Time__c) * 24, 24))) &amp; &quot; hours&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>