force-app/main/default/objects/Session__c/fields/Session_Rating_feedback__c.field-meta.xml
<CustomField>
    <fullName>Session_Rating_feedback__c</fullName>
    <label>Session Rating feedback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>