force-app/main/default/objects/Session__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipLabel>sessions</relationshipLabel>
    <relationshipName>sessions</relationshipName>
    <type>Lookup</type>
</CustomField>