force-app/main/default/objects/Session__c/fields/Virtual_Link__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Link__c</fullName>
    <label>Virtual Link</label>
    <type>Url</type>
</CustomField>